# np-completeness

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  render_all.sh
code/: factoring.py  sudoku-solver.py  sudoku_solver.py
manim/: anims-circuit.py  anims-sudoku.py  anims.py  circ.ipe
manim/utils/: cube.py  cube_utils.py  cubie.py  util_cliparts.py  util_cube.py  util_graph.py
np_completeness/: anims.py  anims_circuit.py  anims_circuit_horrible.py  anims_np.py  anims_sudoku.py  manim.cfg
np_completeness/audio/: rising-falling.flac
np_completeness/img/: cpu1.avif
np_completeness/utils/: bundle_rendered_videos.py  circuit.py  circuit_example.py  cnf_constraints.py  coloring_circuits.py  cube.py  cubie.py  gate.py  manim_circuit.py  old_circuit.py  old_gate.py  old_wire.py  propagation.py  specific_circuits.py  util_cliparts.py  util_cube.py  util_general.py  util_graph.py  wire.py
tests/: test_circuit.py  test_manim_circuit.py  test_propagation.py  test_specific_circuits.py
