[tool.poetry]
name = "np_completeness"
version = "0.1.0"
description = ""
authors = ["The Polylog Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
manim = "^0.18.1"
numpy = "^1.26"
python-sat = {extras = ["aiger", "approxmc", "pblib"], version = "^1.8.dev13"}
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.372"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]


ignore = [
    # `from X import *` used; unable to detect undefined names.
    # It's an unfortunate manim convention to use `from manim import *`.
    "F403",
    # X may be undefined, or defined from star imports.
    # Same reason.
    "F405",
    # Ambiguous variable name: `l`
    # This one is kind of pedantic.
    "E741",
]

select = [
    "I", # Sort imports
    "F401", # Remove unused imports
]

[tool.pyright]

include = [
    "np_completeness/",
    "tests/",
    # "code/", # We might want to include this in the future
]

typeCheckingMode = "strict"

# `from manim import *` is an unfortunate Manim convention.
reportWildcardImportFromLibrary = false

# In strict mode, Pyright wants to know the types of all variables.
# This is too strict.
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

reportMissingTypeStubs = false

# We redefine some Manim colors - it's hacky because then the import order matters,
# but it also makes some things easier.
reportConstantRedefinition = false
